# cpuminer-opt2

./: INSTALL_WINDOWS  Makefile.am  algo-gate-api.c  build-windows-all.bat  build-windows-cpu.bat  build-windows-gpu.bat  build-windows-stage2-cpu.sh  build-windows-stage2-gpu.sh  build-windows-stage2.sh  configure.ac  cpu-miner.c  cpuminer.1  gpu_detection.h  miner.h  util.c  winbuild-cross-full.sh
algo/argon2d/: argon2d-gate.c  argon2d-gate.h  argon2d-gpu-gate.cpp  argon2d-gpu-gate.h
algo/argon2d/argon2-gpu/: CMakeLists.txt
algo/argon2d/argon2-gpu/data/kernels/: argon2_kernel.cl
algo/argon2d/argon2-gpu/include/argon2-gpu-common/: argon2-common.h
algo/argon2d/argon2-gpu/lib/argon2-cuda/: kernels.cu
algo/argon2d/argon2d/: opt.c
algo/dualpowdpc/: dualpowdpc-gate.c  dualpowdpc-gate.h
algo/yespower/: yespower.h
